--- a/front/static/notif.css
+++ b/front/static/notif.css
@@ -125,79 +125,54 @@ body {
   }
 
   section {
-    /* display: flex;
-    align-items: center; */
+    /* display: flex; */
+    
     font-family: 'Arial', sans-serif;
     /* background:linear-gradient(to right, #1b3e91, #0f1114); */
-    margin-top: 60px;
+    width: 50%;
+    margin: 60px auto 60px auto;
     padding: 20px;
+    align-items: center;
     text-align: center;
-    margin-bottom: 60px;
+    align-content: center;
 
 }
-
-.container {
-  max-width: 600px;
-  margin: 2px auto;
-  background-color: hsl(240, 4%, 21%);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  color: white;
-  border-radius: 10px;
-  overflow: hidden;
-  transition: transform 0.3s ease;
-  padding: 20px;
-  width: 600px;
-  text-align: center;
-  transform: translateX(-50px);
-  animation: slideInLeft 1s forwards;
-}
-
-.container:hover {
-  background-color: white;
-  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
-  color: hsl(240, 4%, 21%);
-  transform: scale(1.05);
-  opacity: 0.8;
-}
-
-.cont{
-  color: #ffffffdc;
-  text-decoration: none;
-}
-
+  
 .notification {
-    border-radius: 10px;
-    padding: 20px;
-    width: 300px;
-    text-align: center;
-  }
+  background-color: #333;
+  color: #fff;
+  border-radius: 8px;
+  padding: 10px;
+  margin: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .notification h2 {
-    color: #ffffffdc;
-    margin: 0;
-    font-size: 18px;
-  }
+.avatar {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
 
-  .notification p {
-    color: #ffffff;
-    margin: 10px 0;
-    font-size: 18px;
-    opacity: 0.8;
-  }
+.post-image {
+  width: auto;
+  height: 90px;
+  margin-left: 10px;
+}
 
-  .close-button {
-    background-color: #58585c;
-    color: #ffffff;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-  }
-  .close-button:hover {
-    background-color: #414142;
-    transform: scale(1.05);
-  }
+.username {
+  font-weight: bold;
+  margin-bottom: 3px;
+}
+
+.message {
+  flex-grow: 1;
+  text-align: center;
+}
+
+
 
 nav a span{
   position: absolute;
