--- a/front/static/signup.css
+++ b/front/static/signup.css
@@ -1,77 +1,143 @@
 body {
-  /* background-color: #171a21;  */
-  background: url('jpg/oboi2.jpg') no-repeat center center fixed; 
-  color: #ffffff; /* Белый текст */
+  margin: 0;
+  padding: 0;
   font-family: Arial, sans-serif;
+  background:linear-gradient(to right, #00111d, #000000);
+  /* background: url('jpg/oboi.jpg') no-repeat center center fixed;  */
+  /* background:#171a21;  */
 }
 *{
-padding: 0;
-margin: 0;
+  padding: 0;
+  margin: 0;
 }
 @media (min-width: 3000px) {
   body {
-    background: url('jpg/oboi2.jpg') repeat;
+    background: url('jpg/oboi.jpg') repeat;
   }
 }
-
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(51, 51, 51, 0.5); 
-    color: white;
-    text-align: left;
-    padding: 10px;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(51, 51, 51, 0.5); 
+  /* background-color: #333; */
+  color: white;
+  text-align: left;
+  padding: 10px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  padding-right: 20px;
   
-  nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    padding-right: 20px;
+}
+
+nav a {
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+  font-weight: bold;
+  color: white; 
+  margin: 0 10px; 
+  transform: translateY(-50px);
+  animation: slideInTop 1s forwards;
+}
+
+nav a:hover {
+  color: rgb(68, 217, 236);
+}
+
+
+nav a span{
+position: absolute;
+top: 20%;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: -1;
+border-bottom: 2px solid #0ef;
+border-radius: 15px;
+transform: scale(0) translateY(50px);
+opacity: 0;
+transition: .5s;
+}
+
+nav a:hover span{
+transform: scale(1) translateY(0px);
+opacity: 1;
+}
+
+@keyframes slideInLeft {
+from {
+    opacity: 0;
+    transform: translateX(-50px);
+}
+to {
+    opacity: 1;
+    transform: translateX(0);
+}
+}
+
+@keyframes slideInRight {
+from {
+    opacity: 0;
+    transform: translateX(50px);
+}
+to {
+    opacity: 1;
+    transform: translateX(0);
+}
+}
+
+@keyframes slideInTop {
+from {
+    opacity: 0;
+    transform: translateY(-50px);
+}
+to {
+    opacity: 1;
+    transform: translateY(0);
+}
+}
+
+@keyframes slideInBot {
+from {
+    opacity: 0;
+    transform: translateY(50px);
+}
+to {
+    opacity: 1;
+    transform: translateY(0);
+}
+}
+main h1{
+  color: white; /* Цвет текста */
+}
     
-  }
-  nav a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-  }
-  
-  nav .left a,
-  nav .center a,
-  nav .right a {
-    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
-    color: white; 
-    margin: 0 10px; 
-  }
-  
-  nav .left a:hover,
-  nav .center a:hover,
-  nav .right a:hover {
-    color: rgb(68, 217, 236);
-  }
-  
-  footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
-  }
-
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
   
 
- a {
+ main a {
     color: white; /* Цвет текста */
     text-decoration: none; /* Убираем подчеркивание */
 }
-a:hover {
+main a:hover {
     color: rgb(0, 200, 255); /* Цвет текста */
 }
 main{
