--- a/front/static/post.css
+++ b/front/static/post.css
@@ -2,8 +2,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: url('jpg/oboi.jpg') no-repeat center center fixed; 
-    /* background:#171a21;  */
+    /* background: url('jpg/oboi.jpg') no-repeat center center fixed;  */
+    background:linear-gradient(to right, #00111d, #000000);
   }
   *{
     padding: 0;
