--- a/front/static/profile.css
+++ b/front/static/profile.css
@@ -2,7 +2,72 @@ body {
     font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background: black;
+}
+
+
+
+*{
+    padding: 0;
+    margin: 0;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /* background-color: rgba(51, 51, 51, 0.5);  */
+    color: white;
+    text-align: left;
+    padding: 50px;
+}
+
+nav {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    padding-right: 20px;
+
+}
+
+nav a {
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+    font-weight: bold;
+    color: white; 
+    margin: 0 10px; 
+    transform: translateY(-50px);
+    animation: slideInTop 1s forwards;
+}
+
+nav a:hover {
+    color: rgb(255, 0, 119);
+}
+
+
+nav a span{
+    position: absolute;
+    top: 20%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-bottom: 2px solid rgb(255, 0, 119);
+    border-radius: 15px;
+    transform: scale(0) translateY(50px);
+    opacity: 0;
+    transition: .5s;
+}
+
+nav a:hover span{
+    transform: scale(1) translateY(0px);
+    opacity: 1;
 }
 
 .back{
@@ -12,28 +77,9 @@ body {
     color: white;
 }
 
-nav a {
-    top: 20px;
-    display: inline;
-    position: relative;
-    text-decoration: none;
-    color: white;
-    font-size: 26px;
-    font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
-    font-weight: 500;
-    color: white; 
-    margin: 0 10px; 
-    transform: translateY(-50px);
-    animation: slideInTop 1s forwards;
-    }
-
-nav a:hover {
-    color: rgb(68, 217, 236);
-    transform: scale(1.1);
-    }
-
 
 .profile, .editProfile {
+    
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
@@ -115,3 +161,11 @@ form label{
     
 }
 
+.askeds{
+    max-width: 600px;
+    line-height:1.8;
+    font-size:18px;
+    color:aliceblue;
+    margin: 0 auto;
+    margin-bottom: 60px;
+}
