--- a/front/static/signin.css
+++ b/front/static/signin.css
@@ -1,144 +1,206 @@
 body {
-    background: url('jpg/oboi2.jpg') no-repeat center center fixed; 
-    /* background-color: #171a21;  */
-    color: #ffffff; /* Белый текст */
-    font-family: Arial, sans-serif;
-  }
-  *{
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background:linear-gradient(to right, #00111d, #000000);
+  /* background: url('jpg/oboi.jpg') no-repeat center center fixed;  */
+  /* background:#171a21;  */
+}
+*{
   padding: 0;
   margin: 0;
+}
+@media (min-width: 3000px) {
+  body {
+    background: url('jpg/oboi.jpg') repeat;
   }
-  @media (min-width: 3000px) {
-    body {
-      background: url('jpg/oboi2.jpg') repeat;
-    }
-  }
-  .note{
-    background: url('jpg/note.png') no-repeat center center fixed; 
-    background-size: contain;
-  }
-  
-  header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-color: rgba(51, 51, 51, 0.5); 
-      color: white;
-      text-align: left;
-      padding: 10px;
-    }
-    
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px;
-      padding-right: 20px;
-      
-    }
-    nav a {
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
-    }
-    
-    nav .left a,
-    nav .center a,
-    nav .right a {
-      
-      font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
-      color: white; 
-      margin: 0 10px; 
-    }
-    
-    nav .left a:hover,
-    nav .center a:hover,
-    nav .right a:hover {
-      color: rgb(68, 217, 236);
-    }
-    
-    footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 10px;
-    }
-  
-    
-  
-   a {
-      color: white; /* Цвет текста */
-      text-decoration: none; /* Убираем подчеркивание */
-  }
-  a:hover {
-      color: rgb(0, 200, 255); /* Цвет текста */
-  }
-  main{
-      margin-top: 10%;
-      font-family: 'Arial', sans-serif;
-      
-      padding: 20px;
-  }
-  
-  form {
-      max-width: 400px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #1b1e24; /* Цвет формы */
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  }
-  
-  label {
-      display: block;
-      margin-bottom: 8px;
-      color: #66c0f4; /* Акцентный цвет Steam */
-  }
-  
-  input {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 16px;
-      box-sizing: border-box;
-  }
-  
-  button {
-      background-color: #66c0f4; /* Акцентный цвет Steam */
-      color: #ffffff;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 3px;
-      cursor: pointer;
-      font-size: 16px;
-  }
-  
-  button:hover {
-      background-color: #4fa2db; /* Цвет при наведении */
-  }
-  
-
-  .social-link {
-    display: inline-block;
-    width: 30px; /* начальная ширина */
-    height: 30px; /* начальная высота */
-    transition: all 0.3s ease; /* добавляем плавное переходное свойство */
+}
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(51, 51, 51, 0.5); 
+  /* background-color: #333; */
+  color: white;
+  text-align: left;
+  padding: 10px;
 }
 
-/* Стили для изображений внутри ссылок */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  padding-right: 20px;
+  
+}
+
+nav a {
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+  font-weight: bold;
+  color: white; 
+  margin: 0 10px; 
+  transform: translateY(-50px);
+  animation: slideInTop 1s forwards;
+}
+
+nav a:hover {
+  color: rgb(68, 217, 236);
+}
+
+
+nav a span{
+position: absolute;
+top: 20%;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: -1;
+border-bottom: 2px solid #0ef;
+border-radius: 15px;
+transform: scale(0) translateY(50px);
+opacity: 0;
+transition: .5s;
+}
+
+nav a:hover span{
+transform: scale(1) translateY(0px);
+opacity: 1;
+}
+
+@keyframes slideInLeft {
+from {
+    opacity: 0;
+    transform: translateX(-50px);
+}
+to {
+    opacity: 1;
+    transform: translateX(0);
+}
+}
+
+@keyframes slideInRight {
+from {
+    opacity: 0;
+    transform: translateX(50px);
+}
+to {
+    opacity: 1;
+    transform: translateX(0);
+}
+}
+
+@keyframes slideInTop {
+from {
+    opacity: 0;
+    transform: translateY(-50px);
+}
+to {
+    opacity: 1;
+    transform: translateY(0);
+}
+}
+
+@keyframes slideInBot {
+from {
+    opacity: 0;
+    transform: translateY(50px);
+}
+to {
+    opacity: 1;
+    transform: translateY(0);
+}
+}
+
+    
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+  
+main h1{
+  color: white; /* Цвет текста */
+}
+
+main a {
+    color: white; /* Цвет текста */
+    text-decoration: none; /* Убираем подчеркивание */
+}
+main a:hover {
+    color: rgb(0, 200, 255); /* Цвет текста */
+}
+main{
+    margin-top: 10%;
+    font-family: 'Arial', sans-serif;
+    
+    padding: 20px;
+}
+
+form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #1b1e24; /* Цвет формы */
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+    color: #66c0f4; /* Акцентный цвет Steam */
+}
+
+input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #66c0f4; /* Акцентный цвет Steam */
+    color: #ffffff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #4fa2db; 
+}
+
+
+.social-link {
+  display: inline-block;
+  width: 30px;
+  height: 30px; 
+  transition: all 0.3s ease; 
+}
+
+
 .social-link img {
-    width: 100%; /* растягиваем изображение на всю ширину ссылки */
-    height: auto; /* автоматически вычисляем высоту изображения */
-    vertical-align: middle;
+  width: 100%; 
+  height: auto; 
+  vertical-align: middle;
 }
 
-/* При наведении мыши */
+
 .social-link:hover {
-    width: 100px; /* увеличиваем ширину при наведении */
-    height: 100px; /* увеличиваем высоту при наведении */
+  width: 40px; 
+  height: 40px; 
 }
