--- a/front/static/profile.css
+++ b/front/static/profile.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -75,6 +75,23 @@ nav a:hover span{
     margin: 0 auto;
     padding: 20px;
     color: white;
+}
+
+.work-space {
+    max-width: 650px;
+    margin: 0 auto;
+    border-radius: 15px;
+    background-color: #222222;
+    border: 1px solid rgb(255, 255, 255);
+}
+
+.work-space img{
+    margin-top: 10px;
+    margin-left: 45%;
+    font-size:30px;
+    filter: brightness(0) invert(1);
+    color:aliceblue;
+
 }
 
 
@@ -141,7 +158,7 @@ form label{
     grid-template-columns: repeat(3, 1fr);
     /* gap: 20px; */
     margin-top: 20px;
-    /* padding: 20px;       */
+    margin-bottom: 40px;      
 }
 
 .post{
